force-app/main/default/objects/SP_FAQ__c/SP_FAQ__c.object-meta.xml
<CustomObject>
    <label>Support Portal FAQ</label>
    <pluralLabel>Support Portal FAQs</pluralLabel>
    <nameField>
        <displayFormat>FAQ-{00000}</displayFormat>
        <label>FAQ Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>AI-generated FAQ articles for the Support Portal Knowledge Base.</description>
</CustomObject>