force-app/main/default/objects/SP_FAQ__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <type>LongTextArea</type>
    <length>32000</length>
    <description>The FAQ answer content.</description>
</CustomField>