force-app/main/default/objects/SP_FAQ__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Getting Started</fullName><default>true</default><label>Getting Started</label></value>
            <value><fullName>Account &amp; Settings</fullName><default>false</default><label>Account &amp; Settings</label></value>
            <value><fullName>Products &amp; Features</fullName><default>false</default><label>Products &amp; Features</label></value>
            <value><fullName>Troubleshooting</fullName><default>false</default><label>Troubleshooting</label></value>
            <value><fullName>Billing</fullName><default>false</default><label>Billing</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>FAQ category for grouping in the Knowledge Base.</description>
</CustomField>