force-app/main/default/objects/SP_FAQ__c/fields/Published__c.field-meta.xml
<CustomField>
    <fullName>Published__c</fullName>
    <label>Published</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>When true, this FAQ is visible on the Knowledge Base page.</description>
</CustomField>