force-app/main/default/objects/SP_FAQ__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>The FAQ question displayed to portal users.</description>
</CustomField>