force-app/main/default/objects/SP_FAQ__c/fields/Source_Document__c.field-meta.xml
<CustomField>
    <fullName>Source_Document__c</fullName>
    <label>Source Document</label>
    <type>Text</type>
    <length>255</length>
    <description>Name of the document used to generate this FAQ.</description>
</CustomField>